[metadata]
name = python-masscan
author = MyKings
version = 1.0.0
author_email = xsseroot@gmail.com
license = GPL-3.0-or-later
keywords = masscan, portscanner
url = https://github.com/MyKings/python-masscan
long_description = file: README.rst
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: System :: Monitoring
    Topic :: System :: Networking
    Topic :: System :: Networking :: Firewalls
    Topic :: System :: Networking :: Monitoring
platforms = Operating System :: OS Independent

[options]
packages = masscan
